# updraft

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_LICENSES.md  clippy.toml  eslint.config.js  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  renovate.json5  tauri-11609-comment.md  tauri-android-relaunch-issue.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: app.rs  flight.rs  lib.rs  protocol.rs  runtime.rs  time.rs
core/src/flight/: mod.rs
core/tests/: app.rs  runtime.rs
docs/: architecture.md  core-architecture-comparison.md  css.md  glossary.md  roadmap.md
docs/decisions/: 0001-svelte-maplibre-gl.md  README.md
docs/design/: README.md  aircraft.md  core-review.md  core.md  data.md  devices.md  devmode.md  distribution.md  frontend.md  multi-client.md  replay.md  runtime.md  server.md  simulator.md  tauri.md  testing.md  traffic.md
docs/discovery/: _features.md  _template.md  enroute.md  garmin-g3x.md  lk8000.md  lx-navia.md  lxnav.md  seeyou-navigator.md  weglide-copilot.md  xcsoar.md  xctrack.md
docs/research/: condor-recording-format.md  maplibre-svelte-integration.md
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: position.spec.ts
frontend/: package.json  playwright.config.ts  vite.config.ts
libs/updraft_aircraft_presets/: Cargo.toml  build.rs
libs/updraft_aircraft_presets/data/: 2g.toml  a60_fauconne.toml  ac_4_russia.toml  ac_4c_russia.toml  ac_5.toml  afh_22.toml  afh_24.toml  ahrens_delphin_v1.toml  ak_5.toml  ak_8.toml  albastar_as.toml  alpin.toml  amt_200_super_ximango.toml  an_66b.toml  antares_18.toml  antares_20.toml  antares_21e.toml  antares_23.toml  apis_13m.toml  apis_2.toml  apis_bee.toml  apis_wr.toml  applebay_zuni_ii.toml  archaeopteryx.toml  arcus.toml  as_22_2.toml  as_33.toml  as_34_me.toml  asg_29.toml  asg_32.toml  ash_25.toml  ash_25_eb_28.toml  ash_26.toml  ash_30_mi.toml  ash_31_18m.toml  ash_31_21m.toml  ash_31_mi.toml  ask_13.toml  ask_14.toml  ask_16.toml  (+492 more)
libs/updraft_aircraft_presets/src/: catalogue.rs  lib.rs  model.rs
libs/updraft_core/: Cargo.toml
libs/updraft_core/src/: app.rs  compute.rs  demo.rs  device.rs  flight.rs  job.rs  lib.rs  protocol.rs  time.rs  timers.rs  workers.rs
libs/updraft_core/tests/: scenario.rs
libs/updraft_egm96/: Cargo.toml
libs/updraft_egm96/benches/: undulation.rs
libs/updraft_egm96/data/: README.md
libs/updraft_egm96/src/: downsample.rs  embedded.rs  lib.rs
libs/updraft_egm96/tests/: golden.rs
libs/updraft_geo/: Cargo.toml
libs/updraft_geo/src/: bounding_box.rs  convert.rs  lat_lon.rs  lib.rs
libs/updraft_nmea/: Cargo.toml
libs/updraft_nmea/benches/: parse.rs
libs/updraft_nmea/src/: datetime.rs  error.rs  field.rs  fields.rs  flarm.rs  framer.rs  framing.rs  lib.rs  message.rs  scalars.rs
libs/updraft_nmea/src/sentences/: cai_w.rs  cambridge.rs  garmin.rs  gga.rs  gnss.rs  gsa.rs  lxwp0.rs  lxwp1.rs  lxwp2.rs  lxwp3.rs  mod.rs  openvario.rs  pcaib.rs  pcaid.rs  pflaa.rs  pflau.rs  pgrmz.rs  rmc.rs
libs/updraft_nmea/src/sentences/flarm/: common.rs  mod.rs  pflaa.rs  pflac.rs  pflau.rs
libs/updraft_nmea/src/sentences/lx/: lxwp0.rs  lxwp1.rs  lxwp2.rs  lxwp3.rs  mod.rs  plxv0.rs  plxvc.rs  plxvf.rs  plxvs.rs  plxvtarg.rs
libs/updraft_nmea/src/snapshots/: updraft_nmea__framing__tests__cambridge_flight_data_fields_fail_independently.snap  updraft_nmea__framing__tests__cambridge_logger_data_maps_not_logged_and_invalid_numeric_fields.snap  updraft_nmea__framing__tests__cambridge_logger_data_rejects_unknown_status_and_invalid_fields.snap  updraft_nmea__framing__tests__cambridge_setting_commands_preserve_fallbacks_and_duplicates.snap  updraft_nmea__framing__tests__decodes_a_no_fix_multi_constellation_gga.snap  updraft_nmea__framing__tests__decodes_a_sentence_with_a_non_utf8_field.snap  updraft_nmea__framing__tests__decodes_a_void_rmc.snap  updraft_nmea__framing__tests__decodes_cambridge_flight_data.snap  updraft_nmea__framing__tests__decodes_cambridge_logger_data.snap  updraft_nmea__framing__tests__decodes_cambridge_setting_commands.snap  updraft_nmea__framing__tests__keeps_unrecognised_sentence_as_unknown.snap  updraft_nmea__framing__tests__parses_gsa.snap  updraft_nmea__framing__tests__parses_lxwp0.snap  updraft_nmea__framing__tests__parses_lxwp1.snap  updraft_nmea__framing__tests__parses_lxwp2.snap  updraft_nmea__framing__tests__parses_lxwp3.snap  updraft_nmea__framing__tests__parses_openvario_data.snap  updraft_nmea__framing__tests__parses_pflaa.snap  updraft_nmea__framing__tests__parses_pflac.snap  updraft_nmea__framing__tests__parses_pflau.snap  updraft_nmea__framing__tests__parses_pgrmz.snap  updraft_nmea__framing__tests__parses_plxv0.snap  updraft_nmea__framing__tests__parses_plxvc.snap  updraft_nmea__framing__tests__parses_plxvf.snap  updraft_nmea__framing__tests__parses_plxvs.snap  updraft_nmea__framing__tests__parses_plxvtarg.snap  updraft_nmea__framing__tests__parses_rmc.snap
libs/updraft_nmea/tests/: corpus.rs  fixture.rs  fuzz.rs  no_panic.rs
libs/updraft_nmea/tests/snapshots/: corpus__flight_1_tally.snap  fixture__decodes_the_opening_sentences.snap
libs/updraft_runtime/: Cargo.toml
libs/updraft_runtime/examples/: async_compute.rs
libs/updraft_runtime/src/: clock.rs  lib.rs  metrics.rs  runtime.rs  timer.rs  worker.rs
libs/updraft_runtime/tests/: integration.rs  runtime.rs
libs/updraft_units/: Cargo.toml
libs/updraft_units/src/: altitude.rs  angle.rs  area.rs  length.rs  lib.rs  macros.rs  mass.rs  pressure.rs  speed.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/tests/: runtime.rs
server/: Cargo.toml
server/examples/: generate_protocol_bindings.rs
server/src/: lib.rs  main.rs  wire.rs
server/src/wire/: bindings.rs
server/tests/: server.rs  shutdown.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: lib.rs  main.rs
testdata/: README.md  euregiocup_2026.cup  euregiocup_2026.txt  weglide_1141558.igc
(+109 files in other folders)
