[workspace]
resolver = "3"
members = ["core", "libs/*", "runtime", "server", "tauri"]

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unsafe_code = "warn"
unused = "warn"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"
unescaped_backticks = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
# The `.then(...).unwrap_or_default()` form is often more compact than the
# `if`/`else` that rustfmt produces for the equivalent condition.
obfuscated_if_else = "allow"
todo = "warn"
too_long_first_doc_paragraph = "warn"
