[package]
name = "updraft_server"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.103"
axum = "=0.8.9"
clap = { version = "=4.6.1", features = ["derive", "env"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower-http = { version = "=0.7.0", features = ["fs"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "=0.1.3"
tempfile = "=3.27.0"
tower = { version = "=0.5.3", features = ["util"] }
