[package]
name = "updraft_server"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
ts = ["dep:ts-rs"]

[dependencies]
anyhow = "=1.0.104"
axum = "=0.8.9"
clap = { version = "=4.6.3", features = ["derive", "env"] }
futures-util = "=0.3.33"
serde = { version = "=1.0.229", features = ["derive"] }
tokio = { version = "=1.53.1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
tower-http = { version = "=0.7.0", features = ["fs", "trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
ts-rs = { version = "=12.0.1", optional = true }
updraft_core = { path = "../libs/updraft_core" }
updraft_geo = { path = "../libs/updraft_geo" }
updraft_runtime = { path = "../libs/updraft_runtime" }
updraft_units = { path = "../libs/updraft_units" }

[dev-dependencies]
claims = "=0.8.0"
http-body-util = "=0.1.4"
tempfile = "=3.27.0"
tokio = { version = "=1.53.1", features = ["test-util"] }
tower = { version = "=0.5.3", features = ["util"] }

[[example]]
name = "generate_protocol_bindings"
required-features = ["ts"]
