[package]
name = "updraft_tauri"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
name = "updraft_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
log = "=0.4.33"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-log = "=2.8.0"
