[package]
name = "updraft_tauri"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
name = "updraft_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
tauri = { version = "=2.11.5", features = [] }
tracing = "=0.1.44"
tracing-appender = "=0.2.5"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "=0.2.2"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "=0.3.0"
