[package]
name = "updraft_core"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
updraft_geo = { path = "../updraft_geo", features = ["serde"] }
updraft_units = { path = "../updraft_units", features = ["serde"] }

[dev-dependencies]
serde_json = "=1.0.150"
