[package]
name = "updraft_geo"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
approx = ["dep:approx", "updraft_units/approx"]
geo-types = ["dep:geo-types"]
serde = ["dep:serde", "updraft_units/serde"]
ts = ["dep:ts-rs", "updraft_units/ts"]

[dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"], optional = true }
geo-types = { version = "=0.7.19", optional = true }
geographiclib-rs = { version = "=0.2.7", default-features = false }
serde = { version = "=1.0.228", features = ["derive"], optional = true }
ts-rs = { version = "=12.0.1", optional = true }
updraft_units = { path = "../updraft_units" }

[dev-dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"] }
serde_json = "=1.0.150"
updraft_units = { path = "../updraft_units", features = ["approx"] }
