[package]
name = "updraft_geo"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
approx = ["dep:approx", "updraft_units/approx"]
geo-types = ["dep:geo-types"]
serde = ["dep:serde", "updraft_units/serde"]

[dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"], optional = true }
geo-types = { version = "=0.7.19", optional = true }
geographiclib-rs = { version = "=0.2.7", default-features = false }
serde = { version = "=1.0.229", features = ["derive"], optional = true }
updraft_units = { path = "../updraft_units" }

[dev-dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"] }
serde_json = "=1.0.151"
updraft_units = { path = "../updraft_units", features = ["approx"] }
