[package]
name = "updraft_nmea"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
btoi = "=0.5.0"
fast-float2 = "=0.2.3"
updraft_geo = { path = "../updraft_geo" }
updraft_units = { path = "../updraft_units" }

[dev-dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"] }
claims = "=0.8.0"
criterion = "=0.8.2"
insta = "=1.48.0"
proptest = "=1.11.0"
updraft_geo = { path = "../updraft_geo", features = ["approx"] }

[[bench]]
name = "parse"
harness = false
