[package]
name = "updraft_runtime"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
log = "=0.4.33"
updraft_core = { path = "../updraft_core" }

[dev-dependencies]
updraft_geo = { path = "../updraft_geo" }
updraft_units = { path = "../updraft_units" }
