[package]
name = "updraft_runtime"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
tracing = "=0.1.44"
updraft_core = { path = "../updraft_core" }

[dev-dependencies]
updraft_geo = { path = "../updraft_geo" }
updraft_units = { path = "../updraft_units" }
