[package]
name = "updraft_runtime"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
thiserror = "=2.0.19"
tracing = "=0.1.44"
updraft_core = { path = "../updraft_core" }

[dev-dependencies]
claims = "=0.8.0"
updraft_geo = { path = "../updraft_geo" }
updraft_units = { path = "../updraft_units" }
