[package]
name = "updraft_units"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.145"
