[package]
name = "updraft_units"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
approx = ["dep:approx"]
serde = ["dep:serde"]
ts = ["dep:ts-rs"]

[dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"], optional = true }
serde = { version = "=1.0.228", features = ["derive"], optional = true }
ts-rs = { version = "=12.0.1", optional = true }

[dev-dependencies]
approx = { version = "=0.6.0-rc2", features = ["derive"] }
serde_json = "=1.0.150"
